# mqtt-nexus

./: .gitignore  App.tsx  README.cn.md  README.en.md  README.md  coderules  constants.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: release.yml
components/: AboutModal.tsx  ConnectionItem.tsx  ConnectionModal.tsx  HistoryExportModal.tsx  MessageLog.tsx  Publisher.tsx  SettingsModal.tsx  SimpleInputModal.tsx  SubscriptionManager.tsx  TopicWorkbench.tsx
docs/: Why-use-NexusMQTT.md  features.cn.md  features.en.md  linux-do-post.md  为何使用NexusMQTT.md
i18n/: index.ts
i18n/locales/: en.ts  zh.ts
public/: splashscreen.html
scripts/: generate-tauri-icons.mjs
services/: externalLink.ts  tauriBridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config_store.rs  history.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/ai/: payload.rs
src-tauri/src/mqtt/: manager.rs  mod.rs  session.rs
